<resources>
    <string name="app_name">Totality Corporation</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="usernameoremail">UserName/Email</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="signup">Not a member? Sign Up Now</string>
    <string name="signupact">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email id</string>
    <string name="retypepassword">Retype Password</string>
    <string name="mobileno">Mobile No</string>
    <string name="passwordrecover">Password Recovery</string>
    <string name="haveaccount">Does have an account? Sign In</string>
    <string name="recover">Recover Password</string>
    <string name="gmail">Gmail Id</string>
    <string name="logout">Log out</string>
    <string name="facebook_app_id">1872717289426499</string>
    <string name="fb_login_protocol_scheme">fb1872717289426499</string>
</resources>
